--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="new_room">New</string>
     <string name="dialog_message">New room</string>
     <string name="dialog_title">Title</string>
-    <string name="ok">Ok</string>
+    <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="refresh">Refresh</string>
 </resources>
